src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

:root {
  --color-primary: #566e3d;
  --color-bg: #0b0a0a;
  --color-accent: #fbaf00;
  --color-surface: #dff8eb;
  --color-fg: #f8f4f9;
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.13 0.028 261.692);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.13 0.028 261.692);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.13 0.028 261.692);
  /* --primary: oklch(0.21 0.034 264.665); */
  /* --primary-foreground: oklch(0.985 0.002 247.839); */
  /* --secondary: oklch(0.967 0.003 264.542); */
  /* --secondary-foreground: oklch(0.21 0.034 264.665); */
  --muted: oklch(0.967 0.003 264.542);
  --muted-foreground: oklch(0.551 0.027 264.364);
  /* --accent: oklch(0.967 0.003 264.542); */
  /* --accent-foreground: oklch(0.21 0.034 264.665); */
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.928 0.006 264.531);
  --input: oklch(0.928 0.006 264.531);
  --ring: oklch(0.707 0.022 261.325);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0.002 247.839);
  --sidebar-foreground: oklch(0.13 0.028 261.692);
  --sidebar-primary: oklch(0.21 0.034 264.665);
  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
  --sidebar-accent: oklch(0.967 0.003 264.542);
  --sidebar-accent-foreground: oklch(0.21 0.034 264.665);
  --sidebar-border: oklch(0.928 0.006 264.531);
  --sidebar-ring: oklch(0.707 0.022 261.325);
}
@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@theme {
  --color-primary: var(--color-primary);
  --color-bg: var(--color-bg);
  --color-accent: var(--color-accent);
  --color-surface: var(--color-surface);
  --color-fg: var(--color-fg);
  --font-body: var(--font-body);
  --font-heading: var(--font-heading);

  /* animations */
  --animate-slide-text: slideText linear infinite;
  --animate-slide-left: slideLeft 500ms ease-in-out forwards;
  --animate-slide-right: slideRight 500ms ease-in-out forwards;
  --animate-slide-from-left: slideLeft 500ms ease-in-out reverse forwards;
  --animate-slide-from-right: slideRight 500ms ease-in-out reverse forwards;
  --animate-slide-up: slideUp 500ms ease-in-out forwards;
  --animate-fade-in: fadeIn 200ms ease-out forwards;

  /* Add these new custom properties */
  --sliding-text-play-state: running;
  --group-hover-sliding-text-play-state: paused;

  /* keyframes */
  @keyframes slideText {
    0% {
      transform: translateX(-10%);
    }

    100% {
      transform: translateX(110%);
    }
  }

  @keyframes slideLeft {
    0% {
      transform: translateX(0);
    }

    100% {
      transform: translateX(-110%);
    }
  }

  @keyframes slideRight {
    0% {
      transform: translateX(0);
    }

    100% {
      transform: translateX(110%);
    }
  }

  @keyframes slideUp {
    0% {
      bottom: -100%;
    }

    100% {
      bottom: 0;
    }
  }

  @keyframes fadeIn {
    0% {
      top: -30px;
      opacity: 0;
    }
    100% {
      top: 0;
      opacity: 1;
    }
  }
}

body {
  background: var(--color-bg);
  color: var(--color-fg);
  font-family: var(--font-body);
  overflow-x: hidden;
}

/* Custom Scrollbar Styles */
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: var(--color-bg);
  border-radius: var(--radius-sm);
}

::-webkit-scrollbar-thumb {
  background: var(--color-primary);
  border-radius: var(--radius-sm);
  border: 2px solid var(--color-bg);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--color-accent);
}
.terminal::-webkit-scrollbar {
  width: 6px;
}
.terminal.scroll-error::-webkit-scrollbar-thumb {
  background: var(--color-red-900);
}

.button-cutout.primary {
  filter: drop-shadow(1px 0 var(--color-fg)) drop-shadow(-1px 0 var(--color-fg))
    drop-shadow(0 1px var(--color-fg)) drop-shadow(0 -1px var(--color-fg))
    drop-shadow(1px 2px var(--color-fg)) drop-shadow(2px 1px var(--color-fg));
  &:hover,
  &:focus,
  &:active {
    filter: drop-shadow(1px 0 var(--color-fg))
      drop-shadow(-1px 0 var(--color-fg)) drop-shadow(0 1px var(--color-fg))
      drop-shadow(0 -1px var(--color-fg));
  }
}
.button-cutout.accent,
.button-cutout.ghost {
  filter: drop-shadow(1px 0 var(--color-primary))
    drop-shadow(-1px 0 var(--color-primary))
    drop-shadow(0 1px var(--color-primary))
    drop-shadow(0 -1px var(--color-primary))
    drop-shadow(3px 0 var(--color-primary))
    drop-shadow(0 3px var(--color-primary));
  &:hover,
  &:focus,
  &:active {
    filter: drop-shadow(1px 0 var(--color-primary))
      drop-shadow(-1px 0 var(--color-primary))
      drop-shadow(0 1px var(--color-primary))
      drop-shadow(0 -1px var(--color-primary))
      drop-shadow(2px 0 var(--color-primary))
      drop-shadow(0 2px var(--color-primary));
  }
}

.button-cutout.ghost-2 {
  filter: drop-shadow(1px 0 var(--color-fg)) drop-shadow(-1px 0 var(--color-fg))
    drop-shadow(0 1px var(--color-fg)) drop-shadow(0 -1px var(--color-fg))
    drop-shadow(3px 0 var(--color-fg)) drop-shadow(0 3px var(--color-fg));
  &:hover,
  &:focus,
  &:active {
    filter: drop-shadow(1px 0 var(--color-fg))
      drop-shadow(-1px 0 var(--color-fg)) drop-shadow(0 1px var(--color-fg))
      drop-shadow(0 -1px var(--color-fg)) drop-shadow(2px 0 var(--color-fg))
      drop-shadow(0 2px var(--color-fg));
  }
}

.brief-container {
  background-image: linear-gradient(
    to bottom,
    var(--color-surface) 0%,
    var(--color-primary) 6%,
    var(--color-bg) 13%
  );
}

.services-container {
  background-image: linear-gradient(
    to bottom,
    var(--color-bg) 9%,
    #1b2411 59%,
    #313c24 97%
  );
}

.showcase-container {
  background-image: linear-gradient(
    to bottom,
    #313c24 54%,
    #3f4f2d 78%,
    var(--color-primary) 100%
  );
}

.profile-container {
  background-image: linear-gradient(
    to bottom,
    var(--color-bg) 0%,
    #0c0e09 64%,
    #191e13 100%
  );
}
.auth-popup {
  background-image: linear-gradient(
    to bottom right,
    #0b0a0a 0%,
    #0b0a0a04 100%,
    var(--color-fg) 100%
  );
}

.auth-popup-revers {
  background-image: linear-gradient(
    to bottom right,
    #0b0a0a04 0%,
    var(--color-primary) 20%,
    #0b0a0a 100%
  );
}

.quiz-popup {
  background-image: linear-gradient(
    to bottom,
    var(--color-surface) 36%,
    #eaf6f1 63%,
    var(--color-fg) 100%
  );
}

.testimonial-popup {
  background-image: linear-gradient(
    to bottom right,
    var(--color-bg) 40%,
    hsl(0, 5%, 8%) 80%,
    hsl(0, 5%, 80%) 90%
  );
}

.toast-success {
  background-image: linear-gradient(
    to bottom,
    var(--color-surface) 0%,
    var(--color-bg) 13% var(--color-primary) 26%
  );
}
.toast-error {
  background-image: linear-gradient(
    to bottom,
    var(--color-surface) 0%,
    var(--color-bg) 13%,
    var(--color-red-900) 26%
  );
}

.toast-warning {
  background-image: linear-gradient(
    to bottom,
    var(--color-surface) 0%,
    var(--color-bg) 13%,
    var(--color-accent) 26%
  );
}

.problem-article {
  background-image: linear-gradient(to bottom, #212121 0%, #21212175 96%);
}

.profile-dropdown {
  background-image: radial-gradient(
    circle at 80% 10%,
    hsl(0, 5%, 10%) 0%,
    hsl(0, 5%, 6%) 30%,
    var(--color-bg) 80%,
    hsl(0, 5%, 10%) 100%
  );
}

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--color-primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--color-accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

.dark {
  --background: oklch(0.13 0.028 261.692);
  --foreground: oklch(0.985 0.002 247.839);
  --card: oklch(0.21 0.034 264.665);
  --card-foreground: oklch(0.985 0.002 247.839);
  --popover: oklch(0.21 0.034 264.665);
  --popover-foreground: oklch(0.985 0.002 247.839);
  --primary: oklch(0.928 0.006 264.531);
  --primary-foreground: oklch(0.21 0.034 264.665);
  --secondary: oklch(0.278 0.033 256.848);
  --secondary-foreground: oklch(0.985 0.002 247.839);
  --muted: oklch(0.278 0.033 256.848);
  --muted-foreground: oklch(0.707 0.022 261.325);
  --accent: oklch(0.278 0.033 256.848);
  --accent-foreground: oklch(0.985 0.002 247.839);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.551 0.027 264.364);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.21 0.034 264.665);
  --sidebar-foreground: oklch(0.985 0.002 247.839);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
  --sidebar-accent: oklch(0.278 0.033 256.848);
  --sidebar-accent-foreground: oklch(0.985 0.002 247.839);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.551 0.027 264.364);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

